Fixes and Updates:
	- Fixed an issue with random quest reward selection.